# generate-uml

./: .gitignore  main.py  pyproject.toml  readme.md
generate_uml/: run.py
